# CodeCairn

./: .gitignore  AGENTS.md  CONTEXT.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/coding/: README.md  suite.json
benchmarks/locomo/: README.md  canary-20.json  dataset.json  diagnostic-10-temporal.json  diagnostic-160-holdout-v16.json  diagnostic-160-holdout-v17.json  diagnostic-160-holdout-v18.json  diagnostic-160-holdout-v19.json  diagnostic-160-holdout-v22.json  diagnostic-160-holdout-v23.json  diagnostic-20-cost.json  diagnostic-200-v12.json  diagnostic-200-v13.json  diagnostic-200-v14.json  diagnostic-200-v15.json  diagnostic-200-v16.json  diagnostic-200-v17.json  diagnostic-200-v18.json  diagnostic-200-v19.json  diagnostic-200-v2.json  diagnostic-200-v20.json  diagnostic-200-v21.json  diagnostic-200-v22.json  diagnostic-200-v23.json  diagnostic-200-v3.json  (+18 more)
docs/: PRD.md  architecture.md  evidence-bundle.md  recall-v2-design.md  reference-boundaries.md
tests/: conftest.py  test_api.py  test_apply_patch_trace.py  test_claude_importer.py  test_cli.py  test_codex_importer.py  test_coding_evaluation.py  test_compression.py  test_episode_memory.py  test_evaluation_provider.py  test_evidence_bundle.py  test_evidence_gate.py  test_evidence_selector.py  test_grounded_answer.py  test_grounded_answer_retry.py  test_import_session.py  test_label_export.py  test_locomo.py  test_locomo_attempt_journal.py  test_locomo_bundle.py  test_locomo_evidence_coverage.py  test_locomo_grounded_answer.py  test_locomo_oracle_context.py  test_locomo_promotion.py  test_locomo_protocol_assets.py  test_locomo_repair.py  test_locomo_retrieval_gate.py  test_locomo_worker.py  test_markdown_store.py  test_mini_cascade.py  test_oracle_ceiling.py  test_projection_cache.py  test_recall.py  test_recall_context_budget.py  test_recall_planner.py  test_retrieval_evaluation.py  test_retrieval_providers.py  test_semantic_model_adapter.py  test_semantic_projection.py  test_semantic_runtime.py  (+3 more)
(+6381 files in other folders)
