[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codecairn"
version = "0.1.0"
description = "Auditable long-term memory runtime for coding agents."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "lancedb>=0.34,<0.35",
  "pydantic>=2.9,<3.0",
  "pyarrow>=25,<26",
  "typer>=0.15,<1.0",
  "uvicorn>=0.32,<1.0",
]

[dependency-groups]
dev = [
  "import-linter>=2.2,<3.0",
  "mypy>=1.13,<2.0",
  "pytest>=8.3,<9.0",
  "pytest-cov>=6.0,<7.0",
  "ruff>=0.8,<1.0",
]

[project.scripts]
codecairn = "codecairn.bootstrap:main"
codecairn-server = "codecairn.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codecairn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.coverage.run]
branch = true
source = ["codecairn"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["codecairn"]

[tool.importlinter]
root_package = "codecairn"

[[tool.importlinter.contracts]]
name = "Entrypoints depend inward"
type = "layers"
layers = [
  "codecairn.entrypoints",
  "codecairn.service",
  "codecairn.memory",
]

[[tool.importlinter.contracts]]
name = "Adapters do not depend on entrypoints"
type = "forbidden"
source_modules = ["codecairn.importers", "codecairn.storage"]
forbidden_modules = ["codecairn.entrypoints"]

[[tool.importlinter.contracts]]
name = "Service depends on ports, not adapters"
type = "forbidden"
source_modules = ["codecairn.service"]
forbidden_modules = ["codecairn.importers", "codecairn.storage"]

[[tool.importlinter.contracts]]
name = "Entrypoints depend on contracts, not adapters"
type = "forbidden"
source_modules = ["codecairn.entrypoints"]
forbidden_modules = ["codecairn.importers", "codecairn.storage"]
